# doraemon

./: CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: SERVICES_README.md  SERVOCES_MIGRATION_GUIDE.md
examples/: logger_example.py  remote_service_example.py  services_config.yaml  services_module_example.py
examples/logger_usages/: logger_example.py  logger_otel_example.py
src/doraemon/: __init__.py  file_utils.py  remote_service.py
src/doraemon/database_utils/: main.py
src/doraemon/gpt_utils/: chatgpt_api.py
src/doraemon/logger/: file_handler.py  slogger.py  telementory_handler.py
src/doraemon/services/: __init__.py  async_service.py  base_service.py  config_manager.py  enhanced_service.py
tests/doraemon/logger/: conftest.py  test_file_handler.py  test_slogger.py
tests/middleware-deploy/: least_middleware_deployment.yaml  otel-collector-config.yaml
